WIAPASCAL CHANGE LOG
======================
2025/06/11 Release 1.0.1;
	   Solved extra File with size=0 in some scanners;
	   Fix Settings Form Ok,Cancel Button Negative Top;
	   Added Select Path and other Fix to Demo;

        09 Added WIADeviceType function to avoid undefined scanner type exception;
           Patch to avoid nil Download Path ForceDirectories;
           Added WiaWSDsc Unit;
           Updated tests example;
           Updated Version Number to 1.0.1;

        05 Use of IsEqualGUID for Compatibility with fpc 3.2

2025/05/12 Added Device Manufacturer+Name in Settings Form Caption

2025/02/
        28 Added UseRelativePath to Download
        25 Tested and fixed user cancel operations;
           Fixed DownloadNativeUI missing ForceDirectories;

2024/12/06 Enabled Translation for Lazarus;
	   Use resourcestring for Languages support.
2024/11/
        21 Added More Show of Paper Position in Demo
        19 Added ForceDirectories in Download
        18 Added Get/SetPages;
	   Added Download overload with String Array.
        12 Added DocHandling in Download;
	   Changed SettingsForm the Way duplex radiobutton enabled/checked;
	   Select/Settings Form auto destruct after execute;
        11 GetParamsCapabilities and SetParams only if ItemCategory<>wicAUTO;
	   Commented exception when Get/Set Params and Capabilities;
	   Added define UI_Tests for testing UI if Feeder or Range Editor Resolution;
	   SettingsForm set DocHandling if Feeder, set Resolution from Range editor;
        08 Changed the SettingForm Items ComboBox to a ListView with icons;
	   Changed Changed several things in SettingForm;
        07 Changed params of SelectDeviceItem;
	   Added use of GetDocumentHandling in Feeder (cannot test);
	   Moved wptMAX PaperType at end (Problems with XML Write);
	   Deleted use of initItemValues in SettingsForm.SelectCurrentItem
	   Added Feeder GroupBox in SettingsForm